make dust not stop occuring

--- a/Resources/Prototypes/GameRules/meteorswarms.yml
+++ b/Resources/Prototypes/GameRules/meteorswarms.yml
@@ -95,6 +95,7 @@
   components:
   - type: GameRule
   - type: StationEvent
+    reoccurrenceDelay: 1
     earliestStart: 12
     minimumPlayers: 25
   - type: MeteorSwarm
