--- a/Resources/Maps/packed.yml
+++ b/Resources/Maps/packed.yml
@@ -7547,7 +7547,7 @@ entities:
       pos: 24.5,-39.5
       parent: 2
     - type: Door
-      secondsUntilStateChange: -3862.5366
+      secondsUntilStateChange: -3878.2183
       state: Opening
     - type: DeviceLinkSource
       lastSignals:
@@ -69944,6 +69944,13 @@ entities:
     components:
     - type: Transform
       pos: 29.5,-31.5
+      parent: 2
+- proto: SpawnPointBartender
+  entities:
+  - uid: 13732
+    components:
+    - type: Transform
+      pos: 39.5,-9.5
       parent: 2
 - proto: SpawnPointBorg
   entities:
