Fixed faction ID thing

--- a/Resources/Prototypes/StatusIcon/faction.yml
+++ b/Resources/Prototypes/StatusIcon/faction.yml
@@ -53,7 +53,7 @@
     sprite: /Textures/Interface/Misc/job_icons.rsi
     state: Syndicate
 
-- type: statusIcon
+- type: factionIcon
   id: HivemindFaction
   priority: 11
   showTo:
