--- a/Resources/Prototypes/Entities/Mobs/Player/observer.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/observer.yml
@@ -1,11 +1,36 @@
 - type: entity
-  parent: BaseMob
+  id: Incorporeal
+  noSpawn: true
+  description: Mobs without physical bodies
+  components:
+  - type: CargoSellBlacklist
+  - type: MovementSpeedModifier
+    baseSprintSpeed: 12
+    baseWalkSpeed: 8
+  - type: MovementIgnoreGravity
+  - type: Physics
+    bodyType: KinematicController
+    bodyStatus: InAir
+  - type: CanMoveInAir
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeCircle
+          radius: 0.35
+        density: 15
+        mask:
+        - GhostImpassable
+
+- type: entity
+  parent:
+  - Incorporeal
+  - BaseMob
   id: MobObserver
   name: observer
   description: Boo!
   categories: [ HideSpawnMenu ]
   components:
-  - type: CargoSellBlacklist
   - type: Sprite
     overrideContainerOcclusion: true # Ghosts always show up regardless of where they're contained.
     drawdepth: Ghosts
@@ -16,15 +41,6 @@
       shader: unshaded
   - type: ContentEye
     maxZoom: 1.44,1.44
-  - type: Fixtures
-    fixtures:
-      fix1:
-        shape:
-          !type:PhysShapeCircle
-          radius: 0.35
-        density: 15
-        mask:
-        - GhostImpassable
   - type: Eye
     drawFov: false
   - type: Input
@@ -33,18 +49,10 @@
     skipChecks: true
   - type: Ghost
   - type: GhostHearing
-  - type: MovementSpeedModifier
-    baseSprintSpeed: 12
-    baseWalkSpeed: 8
-  - type: MovementIgnoreGravity
   - type: IntrinsicRadioReceiver
   - type: ActiveRadio
     receiveAllChannels: true
     globalReceive: true
-  - type: Physics
-    bodyType: KinematicController
-    bodyStatus: InAir
-  - type: CanMoveInAir
   - type: Tag
     tags:
     - BypassInteractionRangeChecks
