--- a/Resources/Prototypes/Maps/debug.yml
+++ b/Resources/Prototypes/Maps/debug.yml
@@ -27,6 +27,7 @@
         - type: StationJobs
           availableJobs:
             Captain: [ -1, -1 ]
+            StationAi: [1, 1]
 
 - type: gameMap
   id: TestTeg
