--- a/Resources/Changelog/Changelog.yml
+++ b/Resources/Changelog/Changelog.yml
@@ -1,109 +1,4 @@
-﻿Entries:
-<<<<<<< HEAD
-- author: lzk228
-  changes:
-  - message: Fixed bug with pathological liar and zombie accents.
-    type: Fix
-  id: 6600
-  time: '2024-05-17T16:33:22.0000000+00:00'
-  url: https://github.com/space-wizards/space-station-14/pull/28049
-- author: YuNii
-  changes:
-  - message: Added the ability to re-bind the emote menu.
-    type: Add
-  id: 6601
-  time: '2024-05-17T19:46:45.0000000+00:00'
-  url: https://github.com/space-wizards/space-station-14/pull/28083
-- author: benjamin-burges
-  changes:
-  - message: Bible summon messages are now only visible to the chaplain using the
-      Bible.
-    type: Tweak
-  id: 6602
-  time: '2024-05-18T14:23:17.0000000+00:00'
-  url: https://github.com/space-wizards/space-station-14/pull/28104
-- author: Aquif
-  changes:
-  - message: Changing your character's description now properly updates the save button.
-    type: Fix
-  - message: The character description editor does not discard your last edit anymore.
-    type: Fix
-  id: 6603
-  time: '2024-05-19T00:23:45.0000000+00:00'
-  url: https://github.com/space-wizards/space-station-14/pull/28122
-- author: DrSmugleaf
-  changes:
-  - message: Attempting to dual wield something will now automatically drop the item
-      in your other hand.
-    type: Tweak
-  id: 6604
-  time: '2024-05-19T01:35:46.0000000+00:00'
-  url: https://github.com/space-wizards/space-station-14/pull/27975
-- author: SHOTbyGUN
-  changes:
-  - message: White cane recipe for MedFab
-    type: Add
-  id: 6605
-  time: '2024-05-19T22:22:45.0000000+00:00'
-  url: https://github.com/space-wizards/space-station-14/pull/28146
-- author: EmoGarbage404
-  changes:
-  - message: Mirrors work again.
-    type: Fix
-  id: 6606
-  time: '2024-05-19T22:35:55.0000000+00:00'
-  url: https://github.com/space-wizards/space-station-14/pull/28084
-- author: PolterTzi
-  changes:
-  - message: The guidebook now lists the effects reagents have on plants.
-    type: Add
-  id: 6607
-  time: '2024-05-19T23:01:44.0000000+00:00'
-  url: https://github.com/space-wizards/space-station-14/pull/28038
-- author: Tayrtahn
-  changes:
-  - message: The popup for someone pointing at you is now slightly larger than normal
-      popups.
-    type: Tweak
-  id: 6608
-  time: '2024-05-20T13:32:25.0000000+00:00'
-  url: https://github.com/space-wizards/space-station-14/pull/28152
-- author: Tayrtahn
-  changes:
-  - message: '"Warp to most followed" ghost option no longer includes admins and non-ghost
-      followers.'
-    type: Fix
-  id: 6609
-  time: '2024-05-20T14:12:05.0000000+00:00'
-  url: https://github.com/space-wizards/space-station-14/pull/28120
-- author: Killerqu00
-  changes:
-  - message: Sleeper Agents only appear once per round.
-    type: Tweak
-  id: 6610
-  time: '2024-05-21T10:16:35.0000000+00:00'
-  url: https://github.com/space-wizards/space-station-14/pull/28160
-- author: TheShuEd
-  changes:
-  - message: Artifact portal lifespan reduced from 120 seconds to 1 second
-    type: Tweak
-  id: 6611
-  time: '2024-05-22T07:52:58.0000000+00:00'
-  url: https://github.com/space-wizards/space-station-14/pull/28200
-- author: nikthechampiongr
-  changes:
-  - message: Firelocks can now be pried by hand.
-    type: Tweak
-  - message: Firelocks will now not automatically close for 2 seconds after you pry
-      them open.
-    type: Tweak
-  - message: Firelocks are now properly predicted.
-    type: Fix
-  id: 6612
-  time: '2024-05-22T11:16:20.0000000+00:00'
-  url: https://github.com/space-wizards/space-station-14/pull/26582
-=======
->>>>>>> upstream/master
+Entries:
 - author: blueDev2
   changes:
   - message: Watermelon slices are now considered fruit
@@ -3802,8 +3697,6 @@
   id: 7099
   time: '2024-08-12T23:20:53.0000000+00:00'
   url: https://github.com/space-wizards/space-station-14/pull/30954
-<<<<<<< HEAD
-=======
 - author: pigeonpeas
   changes:
   - message: Added non command mantle into the winterdrobe
@@ -3916,4 +3809,3 @@
   id: 7112
   time: '2024-08-15T01:50:55.0000000+00:00'
   url: https://github.com/space-wizards/space-station-14/pull/29767
->>>>>>> upstream/master
